--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-regular-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
     "@next/swc-win32-x64-msvc": "^15.5.2",
+    "@teachablemachine/image": "^0.8.5",
+    "@tensorflow/tfjs": "^4.22.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
